@startuml

package "LibrarySystem" {

    package "Domain" {
        struct Book {
            - ID: int
            - Title: string
            - Author: string
        }

        struct BookCopy {
            - CopyID: int
            - BookID: int
            - ReaderID: int  // 0 if not borrowed
        }

        struct Reader {
            - ReaderID: int
            - Name: string
            - Surname: string
        }

    }

    package "API" {
        struct HTTPServer {
            HTTPServer is an API Server to interact with the Library
            - storage: LibraryStorage
            + GetBooksHandler()
            + GetBookHandler()
            + CreateBookHandler()
            + DeleteBookHandler()
            + CreateCopyHandler()
            + GetAllCopiesHandler()
            + DeleteCopyHandler()
            + BorrowBookHandler()
            + ReturnBookHandler()
            + GetReadersHandler()
            + GetReaderHandler()
            + CreateReaderHandler()
            + DeleteReaderHandler()
        }
    }

    package "Storage" {
        interface BookStorage {
            + GetBooks() ([]*Book, error)
            + GetBook(id int) (*Book, error)
            + CreateBook(book *Book) error
            + DeleteBook(id int) error
            + GetCopies() ([]*BookCopy, error)
            + GetCopy(id int) (*BookCopy, error)
            + CreateCopy(bookID int) (int, error)
            + UpdateCopy(id int, readerID int) error
            + DeleteCopy(id int) error
        }

        interface ReaderStorage {
            + CreateReader(reader *Reader) error
            + DeleteReader(id int) error
            + GetReaders() ([]*Reader, error)
            + GetReader(id int) (*Reader, error)
        }

        interface LibraryStorage {
            + BookStorage
            + ReaderStorage
        }

        struct InMemoryStorage {
            - InMemoryBookStorage: InMemoryBookStorage
            - InMemoryReaderStorage: InMemoryReaderStorage
            + NewInMemoryStorage(): *InMemoryStorage
        }

        struct InMemoryBookStorage {
            - books: map[int]*Book
            - copies: map[int]*BookCopy
            - nextID: int
            - copyID: int
            - mu: sync.Mutex
        }

        struct InMemoryReaderStorage {
            - readers: map[int]*Reader
            - nextID: int
            - mu: sync.Mutex
        }
    }

    ' Type 	Symbol
    ' Zero or One 	|o--
    ' Exactly One 	||--
    ' Zero or Many 	}o--
    ' One or Many 	}|--

    LibraryStorage <|.. InMemoryStorage : "Implements"
    LibraryStorage <-- BookStorage : "Contains"
    LibraryStorage <-- ReaderStorage : "Contains"
    HTTPServer --> LibraryStorage : "Uses"
    HTTPServer --> Domain : "Uses"
    InMemoryStorage <-- InMemoryBookStorage : "Contains"
    InMemoryStorage <-- InMemoryReaderStorage : "Contains"
    InMemoryBookStorage --> Book : "Stores"
    InMemoryReaderStorage --> Reader : "Stores"
    InMemoryBookStorage --> BookCopy : "Stores"
    InMemoryStorage --> Domain : "Stores"
    BookCopy <-- Book : "References"
    BookCopy <-- Reader : "Borrows"
}

@enduml
